[tool.poetry]
name = "rtc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rtc"}]

[tool.poetry.dependencies]
python = "^3.10"
python-socketio = {version = "^4", extras = ["asyncio_client"]}
aiortc = "^1.3.2"
aiohttp = "^3.8.1"
opencv-python = "^4.7.0.72"
av = "^10.0.0"

[tool.poetry.scripts]
my-script = "cmd_socket.py:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
